--- a/plugin.yml
+++ b/plugin.yml
@@ -1,6 +1,6 @@
-name: Heartdrops
+name: HeartDrops
 main: eu.xoola.HeartDrops.HeartDrops
-version: 1.5.1
+version: 1.5.2
 author: O_Shadow_O - X00LA
 depend: [ProtocolLib]
 commands:
