Update HeartDrops to 1.5.3 for MC 1.9
Changelog:

###Plugin changes:
    Replaced pickup sound definition in config from LEVEL_UP to ENTITY_PLAYER_LEVELUP to get confirm with Spigot-1.9.

###Wiki-Update
    Updated WIKI with the new sound definitions

--- a/config.yml
+++ b/config.yml
@@ -11,7 +11,7 @@ particleTime: 15
 # The sound of an item pickup.
 # You can use different sound.
 # For a list of available sounds look here: https://github.com/X00LA/HeartDrops/wiki/Config
-pickupsound: 'LEVEL_UP'
+pickupsound: 'ENTITY_PLAYER_LEVELUP'
 # The volume of the pickup sound.
 # Increase or decrease the volume as your want.
 pickupvolume: 0.5
@@ -62,7 +62,3 @@ entities:
 # - 'SQUID : 0.2 : 0 : 1 : 1'
 # - 'VILLAGER : 0.2 : 0 : 1 : 1'
 # - 'WOLF : 0.2 : 0 : 1 : 1'
-
---
-libgit2 0.22.2
-
