--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>at.xoola</groupId>
     <artifactId>heartdrops</artifactId>
-    <version>2.0.1-SNAPSHOT</version>
+    <version>v2.0.1-SNAPSHOT</version>
     <packaging>jar</packaging>
 
     <name>heartdrops</name>
