--- a/src/main/resources/paper-plugin.yml
+++ b/src/main/resources/paper-plugin.yml
@@ -1,5 +1,5 @@
 name: 'HeartDrops'
-version: '2.0.1-SNAPSHOT'
+version: 'v2.0.1-SNAPSHOT'
 main: at.xoola.heartdrops.HeartDrops
 api-version: '1.21'
 folia-supported: true
@@ -14,13 +14,23 @@ dependencies:
       load: BEFORE
       join-classpath: true
 
+commands:
+  heartdrops:
+    description: "HeartDrops management commands"
+    usage: "/heartdrops <reload>"
+    permission: heartdrops.command.reload
+    permission-message: "You don't have permission to use this command!"
+
 permissions:
   heartdrops.admin:
-    description: "Admin permission for heartdrops."
+    description: "Admin permission for heartdrops. Grants access to all commands."
     default: op
+    children:
+      heartdrops.command.reload: true
+      heartdrops.pickup: true
   heartdrops.pickup:
     description: "Players with this permission are allowed to pickup hearts."
     default: true
-  heartdrops.command.help:
-    description: "Players with this permission can use the help command for heartdrops."
+  heartdrops.command.reload:
+    description: "Players with this permission can reload the plugin configuration."
     default: op
