--- a/src/main/resources/paper-plugin.yml
+++ b/src/main/resources/paper-plugin.yml
@@ -1,5 +1,5 @@
 name: 'HeartDrops'
-version: 'v2.0.1-SNAPSHOT'
+version: 'v2.1.3-ALPHA'
 main: at.xoola.heartdrops.HeartDrops
 api-version: '1.21'
 folia-supported: true
